node/m-front/deploy/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: gcr.io/mario-214921/front_v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: s-front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: front
      protocol: TCP
      port: 3001
      targetPort: 3001
