node/m-front/deploy/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
    - name: front
      protocol: TCP
      port: 3001
      targetPort: 3001
    - name: SQL
      protocol: TCP
      port: 3001
      targetPort: 3306
