node/m-front/deploy/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: clinica-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bienvenida
spec:
  hosts:
  - "*"
  gateways:
  - clinica-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    - uri:
        prefix: "/css/Inicio_files"
    route:
    - destination:
        port:
          number: 3001
        host: front
