node/m-front/deploy/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ingress-nginx
      http:
        paths:
        - path: /
          backend:
            serviceName: s-front
            servicePort: 3001
